// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WinnersLeaderboard > when there are no winners > matches the snapshot 1`] = `
<div
  class="space-y-6"
>
  <div
    class="flex flex-col sm:flex-row gap-3 items-start sm:items-center"
  >
    <div
      class="flex-1 w-full"
    >
      <form
        class="relative"
      >
        <div
          class="relative"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-muted-foreground h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="file:text-foreground placeholder:text-muted-foreground bg-white selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive pl-10 pr-20"
            data-slot="input"
            placeholder="Search giveaways by name or description..."
            type="search"
            value=""
          />
          <div
            class="absolute right-2 top-1/2 transform -translate-y-1/2 flex gap-1"
          >
            <button
              class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 rounded-md gap-1.5 has-[>svg]:px-2.5 h-6 px-2"
              data-slot="button"
              type="submit"
            >
              Search
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class="flex gap-2 w-full sm:w-auto"
    >
      <a
        class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-white shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 dark:hover:text-accent h-9 px-4 py-2 has-[>svg]:px-3 flex-1 sm:flex-initial"
        data-slot="button"
        href="/browse"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-grid3x3 lucide-grid-3x3 h-4 w-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M3 9h18"
          />
          <path
            d="M3 15h18"
          />
          <path
            d="M9 3v18"
          />
          <path
            d="M15 3v18"
          />
        </svg>
        Active Giveaways
      </a>
      <a
        class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-white shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 dark:hover:text-accent h-9 px-4 py-2 has-[>svg]:px-3 flex-1 sm:flex-initial"
        data-slot="button"
        href="/history"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-history h-4 w-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
          <path
            d="M12 7v5l4 2"
          />
        </svg>
        History
      </a>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-2 rounded-xl border py-4 shadow-md"
    data-slot="card"
  >
    <div
      class="px-4 py-12 text-center text-muted-foreground"
      data-slot="card-content"
    >
      No winners to display yet
    </div>
  </div>
</div>
`;

exports[`WinnersLeaderboard > when there are winners > matches the snapshot 1`] = `
<div
  class="space-y-6"
>
  <div
    class="flex flex-col sm:flex-row gap-3 items-start sm:items-center"
  >
    <div
      class="flex-1 w-full"
    >
      <form
        class="relative"
      >
        <div
          class="relative"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-muted-foreground h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="file:text-foreground placeholder:text-muted-foreground bg-white selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive pl-10 pr-20"
            data-slot="input"
            placeholder="Search giveaways by name or description..."
            type="search"
            value=""
          />
          <div
            class="absolute right-2 top-1/2 transform -translate-y-1/2 flex gap-1"
          >
            <button
              class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 rounded-md gap-1.5 has-[>svg]:px-2.5 h-6 px-2"
              data-slot="button"
              type="submit"
            >
              Search
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class="flex gap-2 w-full sm:w-auto"
    >
      <a
        class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-white shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 dark:hover:text-accent h-9 px-4 py-2 has-[>svg]:px-3 flex-1 sm:flex-initial"
        data-slot="button"
        href="/browse"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-grid3x3 lucide-grid-3x3 h-4 w-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M3 9h18"
          />
          <path
            d="M3 15h18"
          />
          <path
            d="M9 3v18"
          />
          <path
            d="M15 3v18"
          />
        </svg>
        Active Giveaways
      </a>
      <a
        class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-white shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 dark:hover:text-accent h-9 px-4 py-2 has-[>svg]:px-3 flex-1 sm:flex-initial"
        data-slot="button"
        href="/history"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-history h-4 w-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
          <path
            d="M12 7v5l4 2"
          />
        </svg>
        History
      </a>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-2 rounded-xl border shadow-md p-0 overflow-hidden"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="overflow-x-auto"
      >
        <div
          class="relative w-full overflow-auto"
        >
          <table
            class="w-full caption-bottom text-sm"
          >
            <thead
              class="[&_tr]:border-b bg-muted/50"
            >
              <tr
                class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
              >
                <th
                  class="h-10 px-4 pt-1 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 w-16"
                >
                  Rank
                </th>
                <th
                  class="h-10 px-4 pt-1 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
                >
                  Winner
                </th>
                <th
                  class="h-10 px-4 pt-1 align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 text-right"
                >
                  Total Wins
                </th>
                <th
                  class="h-10 px-4 pt-1 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
                >
                  Recent Prizes
                </th>
                <th
                  class="h-10 px-4 pt-1 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 w-12"
                />
              </tr>
            </thead>
            <tbody
              class="[&_tr:last-child]:border-0"
            >
              <tr
                class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
              >
                <td
                  class="px-4 py-2 align-middle [&:has([role=checkbox])]:pr-0 font-bold text-muted-foreground"
                >
                  #
                  1
                </td>
                <td
                  class="px-4 py-2 align-middle [&:has([role=checkbox])]:pr-0"
                >
                  <div
                    class="flex items-center gap-3"
                  >
                    <span
                      class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
                    >
                      <span
                        class="flex h-full w-full items-center justify-center rounded-full bg-muted"
                      >
                        A
                      </span>
                    </span>
                    <div>
                      <div
                        class="font-semibold"
                      >
                        Ada Lovelace
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="px-4 py-2 align-middle [&:has([role=checkbox])]:pr-0 text-right"
                >
                  <div
                    class="flex items-center justify-end gap-2"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-trophy h-4 w-4 text-yellow-500"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
                      />
                      <path
                        d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
                      />
                      <path
                        d="M18 9h1.5a1 1 0 0 0 0-5H18"
                      />
                      <path
                        d="M4 22h16"
                      />
                      <path
                        d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
                      />
                      <path
                        d="M6 9H4.5a1 1 0 0 1 0-5H6"
                      />
                    </svg>
                    <span
                      class="font-semibold"
                    >
                      3
                    </span>
                  </div>
                </td>
                <td
                  class="px-4 py-2 align-middle [&:has([role=checkbox])]:pr-0"
                >
                  <a
                    class="block text-sm hover:underline"
                    href="/browse/sweepstakes-1"
                  >
                    <div
                      class="flex items-start justify-between gap-4"
                    >
                      <div
                        class="flex-1 min-w-0"
                      >
                        <div
                          class="truncate"
                        >
                          Summer Gear Giveaway
                        </div>
                        <div
                          class="text-xs text-muted-foreground truncate"
                        >
                          Hiking backpack
                        </div>
                      </div>
                      <div
                        class="flex items-center gap-1 text-xs text-muted-foreground whitespace-nowrap"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-calendar h-3 w-3"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 2v4"
                          />
                          <path
                            d="M16 2v4"
                          />
                          <rect
                            height="18"
                            rx="2"
                            width="18"
                            x="3"
                            y="4"
                          />
                          <path
                            d="M3 10h18"
                          />
                        </svg>
                        Mar 2, 2026
                      </div>
                    </div>
                  </a>
                </td>
                <td
                  class="px-4 py-2 align-middle [&:has([role=checkbox])]:pr-0"
                >
                  <button
                    class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
                    data-slot="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-down h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                </td>
              </tr>
              <tr
                class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
              >
                <td
                  class="px-4 py-2 align-middle [&:has([role=checkbox])]:pr-0 font-bold text-muted-foreground"
                >
                  #
                  2
                </td>
                <td
                  class="px-4 py-2 align-middle [&:has([role=checkbox])]:pr-0"
                >
                  <div
                    class="flex items-center gap-3"
                  >
                    <span
                      class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
                    >
                      <span
                        class="flex h-full w-full items-center justify-center rounded-full bg-muted"
                      >
                        W
                      </span>
                    </span>
                    <div>
                      <div
                        class="font-semibold"
                      >
                        Anonymous Winner
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="px-4 py-2 align-middle [&:has([role=checkbox])]:pr-0 text-right"
                >
                  <div
                    class="flex items-center justify-end gap-2"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-trophy h-4 w-4 text-yellow-500"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
                      />
                      <path
                        d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
                      />
                      <path
                        d="M18 9h1.5a1 1 0 0 0 0-5H18"
                      />
                      <path
                        d="M4 22h16"
                      />
                      <path
                        d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
                      />
                      <path
                        d="M6 9H4.5a1 1 0 0 1 0-5H6"
                      />
                    </svg>
                    <span
                      class="font-semibold"
                    >
                      1
                    </span>
                  </div>
                </td>
                <td
                  class="px-4 py-2 align-middle [&:has([role=checkbox])]:pr-0"
                >
                  <a
                    class="block text-sm hover:underline"
                    href="/browse/sweepstakes-4"
                  >
                    <div
                      class="flex items-start justify-between gap-4"
                    >
                      <div
                        class="flex-1 min-w-0"
                      >
                        <div
                          class="truncate"
                        >
                          Gaming Chair Draw
                        </div>
                      </div>
                      <div
                        class="flex items-center gap-1 text-xs text-muted-foreground whitespace-nowrap"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-calendar h-3 w-3"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 2v4"
                          />
                          <path
                            d="M16 2v4"
                          />
                          <rect
                            height="18"
                            rx="2"
                            width="18"
                            x="3"
                            y="4"
                          />
                          <path
                            d="M3 10h18"
                          />
                        </svg>
                        Jan 15, 2026
                      </div>
                    </div>
                  </a>
                </td>
                <td
                  class="px-4 py-2 align-middle [&:has([role=checkbox])]:pr-0"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <nav
    aria-label="pagination"
    class="mx-auto flex w-full justify-center mt-8"
    data-slot="pagination"
    role="navigation"
  >
    <ul
      class="flex flex-row items-center gap-1"
      data-slot="pagination-content"
    >
      <li
        data-slot="pagination-item"
      >
        <a
          aria-disabled="true"
          aria-label="Go to previous page"
          class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-9 py-2 has-[>svg]:px-3 gap-1 px-2.5 sm:pl-2.5 pointer-events-none opacity-50"
          data-slot="pagination-link"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-left"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
          <span
            class="hidden sm:block"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        data-slot="pagination-item"
      >
        <a
          aria-current="page"
          class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-white shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 dark:hover:text-accent size-9 p-0 [&_svg]:mr-0"
          data-active="true"
          data-slot="pagination-link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        data-slot="pagination-item"
      >
        <a
          aria-disabled="true"
          aria-label="Go to next page"
          class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-9 py-2 has-[>svg]:px-3 gap-1 px-2.5 sm:pr-2.5 pointer-events-none opacity-50"
          data-slot="pagination-link"
          href="#"
        >
          <span
            class="hidden sm:block"
          >
            Next
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
